# CPP_Laba

./: CMakeLists.txt  Explicit.cpp  Explicit.h  Implicit.cpp  Implicit.h  main.cpp
